# series-approximation-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Nivel1_Inicial/: main_nivel1.c
Nivel2_Intermedio/: main_nivel2.c
Nivel2_Intermedio/include/: series_v2.h
Nivel2_Intermedio/src/: constantes.c  exponenciales.c  trigonometricas.c
Nivel3_Avanzado/: main_nivel3.c
Nivel3_Avanzado/include/: series_v3.h
Nivel3_Avanzado/src/: especial_opt.c  trig_exp_opt.c
